--- a/src/Heading/heading.module.scss
+++ b/src/Heading/heading.module.scss
@@ -158,7 +158,7 @@
             top: 0;
             left: 50%;
             transform: translate(-50%, 25%);
-            width: 842px;
+            width: 65%;
             height: 70px;
     
             border-radius: 48px;
