--- a/src/Heading/language/language.module.scss
+++ b/src/Heading/language/language.module.scss
@@ -1,12 +1,12 @@
 .container {
-    z-index: 1;
+    z-index: 100;
     display: none;
     padding-top: 100px;
     justify-content: center;
     width: 100%;
-    height: 100vh;
+    height: 100%;
 
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
 
@@ -27,7 +27,7 @@
         opacity: 1;
         width: 1032px;
         background-color: #fff;
-        height: 840px;
+        height: 90%;
         color: #000;
         border-bottom-left-radius: 16px;
 
@@ -56,7 +56,7 @@
             padding: 32px;
             overflow: hidden;
             overflow-y:scroll;
-            height: 840px;
+            height: 100%;
 
     
             .navBar {
