Add responsive to header and change JS

--- a/src/grid.module.scss
+++ b/src/grid.module.scss
@@ -28,6 +28,10 @@
     justify-content: center;
 }
 
+.jSpaceBetween {
+    justify-content: space-between;
+}
+
 .boxShadow {
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
