--- a/src/Content/HeadingContent/headingContent.module.scss
+++ b/src/Content/HeadingContent/headingContent.module.scss
@@ -1,61 +1,19 @@
 .container {
     background-color: #fff;
-    margin-top: 157px;
-    height: 100%;
+    border-top: 156px solid black;
     position: relative;
 
     .content {
-        background-color: white;
-        width: 100%;
-        height: 100vh;
-        position: relative;
         display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-
-        .banner1 {
-            width: 100%;
-            background-color: #ff385c!important;
-            margin: 5% 0 -5% 0;
-            padding: 0 100px;
-            border-radius: 12px;
-            height: 33.1325%;
-            z-index: 5;
-            position: relative;
-
-            .contentBanner1 {
-                width: 100%;
-                height: 100%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                flex-direction: column;
-
-                p {
-                    font-size: 38px;
-                    text-align: center;
-                    font-weight: 600;
-                    display: block;
-                    color: #fff;
-                    margin-bottom: 24px;
-                }
-
-                a {
-                    border-radius: 8px;
-                    border: 1px solid #fff;
-                    padding: 8px 12px;
-                    display: block;
-                    color: #fff;
-                    cursor: pointer;
-                }
-            }
-        }
+        align-items: flex-end;
+        height: 1600px;
 
         .banner2 {
             width: 100%;
-            height: 50%;
+            height: 60%;
             position: relative;
             border-radius: 16px;
+
 
             .background {
                 border-radius: 16px;
@@ -70,12 +28,12 @@
                 transform: translate(-50%, 0);
                 color: #fff;
                 text-align: center;
-                
+
                 h1 {
                     font-size: 42px;
                     white-space: nowrap;
                 }
-    
+
                 a {
                     font-weight: bold;
                     display: inline-block;
@@ -86,6 +44,45 @@
                     border-radius: 24px;
                 }
             }
+
+            // Add banner1 on banner2
+            .banner1 {
+                width: 100%;
+                background-color: #ff385c !important;
+                border-radius: 12px;
+                height: 45%;
+                z-index: 5;
+                position: absolute;
+                top: -60%;
+
+                .contentBanner1 {
+                    width: 100%;
+                    height: 100%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    flex-direction: column;
+                    padding: 0 10%;
+
+                    p {
+                        font-size: 38px;
+                        text-align: center;
+                        font-weight: 600;
+                        display: block;
+                        color: #fff;
+                        margin-bottom: 24px;
+                    }
+
+                    a {
+                        border-radius: 8px;
+                        border: 1px solid #fff;
+                        padding: 8px 12px;
+                        display: block;
+                        color: #fff;
+                        cursor: pointer;
+                    }
+                }
+            }
         }
 
         .blackBackground {
@@ -93,7 +90,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            height:75%;
+            height: 70%;
             background-color: #000;
         }
     }
@@ -104,7 +101,7 @@
     background-color: #000;
     top: 0;
     left: 0;
-    height: 75%;
+    height: 70%;
     width: 100%;
 }
 
@@ -116,26 +113,24 @@
 // }
 
 /* > PC low resolution */
+@media (max-width: 739px) {
+    .container {
+        // border-top: 1px solid black;
+    }
+
+    .content {
+        height: 1000px !important;
+    }
+}
+
 @media (min-width:1024px) and (max-width:1239px) {
     .content {
-        height: 120vh!important;
+        height: 1300px !important;
     }
 }
 
-@media (max-width: 739px) {
+@media (min-width: 1240px) and (max-width:1839px) {
     .content {
-        height: 200vh!important;
-    }
-}
-
-@media (min-width:1840px) {
-    .content {
-        height: 120vh!important;
-    }
-}
-
-@media (min-width: 2024px) {
-    .content {
-        height: 60vh!important;
+        height: 1400px !important;
     }
 }
