--- a/src/Heading/heading.module.scss
+++ b/src/Heading/heading.module.scss
@@ -230,6 +230,9 @@
                 .searchActiveText {
                     color: #ccc;
                 }
+                .searchActiveText.colorblack {
+                    color: #000
+                }
 
                 input {
                     border: none;
@@ -323,6 +326,90 @@
                     }
                 }
 
+                // Number people
+                .searchActiveNumberPeople {
+                    position: absolute;
+                    top: 100%;
+                    right: 0;
+                    background-color: #fff;
+                    padding: 36px;
+                    margin-top: 10px;
+                    border-radius: 36px;
+                    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+                        rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+                    width: 396px;
+                    cursor: default;
+
+                    .numberPeopleContainer {
+                        display: flex;
+                        justify-content: space-between;
+                        padding: 16px 0;
+                        border-bottom: 1px solid #ccc;
+
+                        .numberPeopleTextContainer {
+
+                            .numberPeopleTitle {}
+
+                            .numberPeopleText {
+                                color: #717171;
+                            }
+
+                            .numberPeopleText.emphasize {
+                                text-decoration: underline;
+                                color: #000;
+                                font-weight: 600;
+                            }
+                        }
+
+                        .numberPeopleGoing {
+                            display: flex;
+                            align-items: center;
+                            justify-content: space-between;
+
+                            .number {
+                                margin: 0 24px;
+                            }
+
+                            .decrease,
+                            .plus {
+                                justify-content: center;
+                                display: flex;
+                                align-items: center;
+                                line-height: 1px;
+                                height: 25px;
+                                width: 25px;
+                                border-radius: 100%;
+                                border: 1px solid #717171;
+                                font-size: 19px;
+                                font-weight: bold;
+                                color: #717171;
+                                cursor: pointer;
+                            }
+
+                            .decrease:hover,
+                            .plus:hover {
+                                color: #000;
+                                border: 1px solid #000;
+                            }
+
+                            .disabled {
+                                cursor: not-allowed;
+                                opacity: 0.2;
+                            }
+
+                            .decrease:hover.disabled {
+                                border: 1px solid #717171;
+                                color: #717171;
+                            }
+                        }
+                    }
+
+                    .numberPeopleContainer:nth-child(4) {
+                        border: none;
+                    }
+                }
+
+                // Ngày hoạt động
                 .searchActiveDate {
                     position: absolute;
                     left: -50%;
@@ -338,6 +425,7 @@
             }
 
             .searchActiveMidleContainer {
+                max-width: 43%;
                 position: relative;
                 flex: 40% 40% 1;
                 display: flex;
@@ -391,6 +479,7 @@
                                 padding: 5px 14px;
                                 cursor: pointer;
                             }
+
                             p:hover,
                             p.selected {
                                 background-color: #fff !important;
@@ -398,6 +487,80 @@
 
                             .pLast {
                                 margin-left: 6px;
+                            }
+                        }
+                    }
+
+                    .flexibleDay {
+
+                        .flexibleDayText {
+                            color: #aaa;
+                            font-weight: 400;
+                            text-align: center;
+                            margin-top: 32px;
+                        }
+
+                        .flexibleRangeDayContainer {
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            margin-top: 20px;
+
+                            .flexibleRangeDay {
+                                padding: 4px 12px;
+                                margin: 0 4px;
+                                border: 1px solid #ccc;
+                                border-radius: 24px;
+                                cursor: pointer;
+                            }
+
+                            .flexibleRangeDay:hover {
+                                border: 1px solid #000;
+                            }
+
+                            .flexibleRangeDay.active {
+                                background-color: #f7f7f7;
+                                border: 1px solid #000;
+                            }
+                        }
+
+                        .flexibleMonthChosenContainer {
+                            display: flex;
+                            max-width: 638px;
+                            overflow-x: scroll;
+
+                            .flexibleMonthChosenContent {
+                                text-align: center;
+                                min-height: 120px;
+                                min-width: 120px;
+                                padding: 16px;
+                                border-radius: 24px;
+                                border: 1px solid #ccc;
+                                margin: 20px 4px;
+                                cursor: pointer;
+
+                                .flexibleIcon {
+                                    line-height: 0;
+                                    font-size: 28px;
+                                }
+
+                                .month {
+                                    padding: 8px 0;
+                                }
+
+                                .year {
+                                    font-size: 12px;
+                                    color: #aaa;
+                                }
+                            }
+
+                            .flexibleMonthChosenContent:hover {
+                                border: 1px solid #000;
+                            }
+
+                            .flexibleMonthChosenContent.active {
+                                border: 1px solid #000;
+                                background-color: #f7f7f7;
                             }
                         }
                     }
