--- a/src/Heading/language/language.module.scss
+++ b/src/Heading/language/language.module.scss
@@ -1,8 +1,10 @@
 @keyframes showUp {
     from {
+        opacity: 0;
         transform: translateY(100%)
     }
     to {
+        opacity: 1;
         transform: translateX(0)
     }
 }
@@ -10,7 +12,6 @@
 .container {
     z-index: 100;
     display: none;
-    padding-top: 100px;
     justify-content: center;
     width: 100%;
     height: 100%;
@@ -26,20 +27,22 @@
         left: 0;
         width: 100%;
         height: 100%;
-        opacity: 0.9;
-        background-color: #000;
+        opacity: 0.4;
+        background-color: rgb(44, 44, 44);
     }
     
     .containerContent {
         position: relative;
         z-index: 2;
         opacity: 1;
-        width: 1032px;
+        max-width: 1032px;
+        width: 80%;
         background-color: #fff;
-        height: 90%;
+        height: 70%;
+        top: 20%;
         color: #000;
         border-bottom-left-radius: 16px;
-        animation: showUp 1s linear;
+        animation: showUp .3s linear;
 
 
         .exitIcon {
@@ -91,9 +94,11 @@
             // Thay đổi ngôn ngữ
             .langChange {
                 .autoTrans {
-                    display: flex;
+                    display: inline-flex;
                     margin-bottom: 68px;
-                    background-color: rgba(246, 244, 255, 0.33);
+                    background-color: #f7f7f7;
+                    padding: 24px 16px;
+                    border-radius: 16px;
     
     
                     .autoTransText {
