--- a/src/Content/Body/placeBody/style.module.scss
+++ b/src/Content/Body/placeBody/style.module.scss
@@ -1,12 +1,60 @@
+@keyframes zoom {
+    from {
+        transform: scale(1) translateY(-50%);
+    }
+
+    to {
+        transform: scale(1.05) translateY(-50%);
+    }
+}
+
+
 .app {
     margin-top: 92px;
 
+    .container {
+        position: relative;
+    }
+
     h1 {
         margin-bottom: 24px;
+        margin-right: 92px;
+    }
+
+    .nextBtn,
+    .prevBtn {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        right: 0;
+        border: 1px solid #d8d8d8;
+        background-color: #fff;
+        padding: 8px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        cursor: pointer;
+    }
+
+    .prevBtn {
+        right: 40px;
+    }
+
+    .nextBtn.disabled,
+    .prevBtn.disabled {
+        opacity: 0.3;
+        cursor: not-allowed;
+    }
+
+    .nextBtn:hover,
+    .prevBtn:hover {
+        animation: zoom 0.1s linear forwards;
+        transform-origin: center;
     }
 
     .content {
-        display:flex; 
+        display: flex;
         flex-direction: column;
         width: 100%;
         border-radius: 8px;
@@ -19,10 +67,35 @@
             width: 100%;
             object-fit: fill;
         }
-        
+
         .text {
             padding: 12px;
             background-color: orange;
+        }
+    }
+}
+
+
+@media (min-width: 768px) and (max-width: 1023px) {
+    .itemContainers {
+        flex-wrap: nowrap;
+        scroll-behavior: smooth;
+        overflow-x: hidden;
+
+        .item {
+            min-width: 356px;
+        }
+    }
+}
+
+@media (max-width: 767px) {
+    .itemContainers {
+        flex-wrap: nowrap;
+        scroll-behavior: smooth;
+        overflow-x: hidden;
+
+        .item {
+            min-width: 300px;
         }
     }
 }
